# Assignment

kream_crawling/: pyproject.toml
kream_crawling/src/: kream_crawler.py
linux/: linux_0113(문제).ipynb  linux_1426.ipynb
melom_crawling/: main.py  pyproject.toml
melom_crawling/data/: melon_chart.csv
melom_crawling/scripts/: crawling.py
web_crawling/: Lactobacillus.py  melon.py  pyproject.toml
